--- a/Final_thesis/uw-ethesis-frontpgs.tex
+++ b/Final_thesis/uw-ethesis-frontpgs.tex
@@ -20,6 +20,7 @@
 			\end{minipage}	
 		\end{figure}
      	%Text front page
+     
         \begin{center}
         \normalsize
         	Frankfurt University of Applied Science\\
@@ -27,8 +28,11 @@
         	\vspace*{0.1cm}
         	Vietnamese - German University\\
         	Department of Electrical Engineering and Infomation Technology
-        
-        \vspace*{2.3cm}
+        \vspace*{1cm}	
+        \begin{center}
+        	Bachelor Thesis
+        \end{center}
+        \vspace*{1.3cm}
         \Large
         {\bf DESIGN AND IMPLENTATION OF A WIRELESS FALL DETECTION NETWORK PROTOTYPE USING MEMS SENSORS}
 
@@ -121,7 +125,7 @@
 {
 	\setstretch{1.5}
 	\par
-	Falling is becoming a serious problem to elderly people with the age of over 65, often causing unpredictable injuries such as hip fractures, head traumas, etc. More seriously, falls may lead to disability or even death on the victim if assistances from caregivers are not received in time. From this situation, there is a need for a wireless communication network which can automatically detect the fall and send an alarm to the caregivers if there is no safe signal from the victim within 10 minutes. There have been several algorithms such as detection of body orientation after a fall, image processing to detect the fall or applying machine learning techniques (Support Vector Machine (SVM), Markov model) in classifying between falling and other activities of daily living (ADL). However, these complex techniques require a huge amount of computations which can result in the system being overloaded or heavily delayed.\par
+	Falling is becoming a serious problem to elderly people, often causing unpredictable injuries such as hip fractures, head traumas, etc. More seriously, falls may lead to disability or even death on the victim if assistances from caregivers are not received in time. From this situation, there is a need for a wireless communication network which can automatically detect the fall and send an alarm to the caregivers if there is no safe signal from the victim within 10 minutes. There have been several algorithms such as detection of body orientation after a fall, image processing to detect the fall or applying machine learning techniques (Support Vector Machine (SVM), Markov model) in classifying between falling and other activities of daily living (ADL). However, these complex techniques require a huge amount of computations which can result in the system being overloaded or heavily delayed.\par
 	Addressing this problem calls for less computation-intensive techniques while retaining the accuracy and robustness of the system. One such approach is the combination of data from both accelerometer and gyroscope. The focus of this thesis is developing a wireless fall detection network which can combine the data from the above sensors to detect falls and distinguish them from fall-like activities. A comparison on the performance of this network with other existing works is also included to evaluate the robustness of the system.\par
 	\vspace{1cm}
 	\textit{\textbf{Keywords:} elderly people, fall detection, accelerometer, gyroscope,  wireless communication network}
@@ -135,7 +139,7 @@
 {
 	\setstretch{1.5}
 	\par
-	I would like to express my sincere appreciation to Prof. Dr.-Ing. Kira Kastell, Vice President of Frankfurt University of Applied Science (FRA-UAS) for supervising, supporting and encouraging me during the time I conduct my senior project and final thesis. Also, I would like to thank Mr. Dipl.-Ing Mansooji - communication lab engineer at FRA-UAS, Dr. Vo Bich Hien - lecturer and Mr. Duong Huynh Bao - former control lab engineer at Vietnamese - German University for guiding me on technical and programming aspect. I also would like to thank my family for their supports during my bachelor degree time. This project will not be completed without their grateful guidances and supports. Thanks to their encouragements, I can improve myself, not only on the fundamental background in my major, but also necessary skills for my future career. I would like to mention all of my seniors and classmates who have helped me through this thesis.\par
+	I would like to express my sincere appreciation to Prof. Dr.-Ing. Kira Kastell, Vice President of Frankfurt University of Applied Science (FRA-UAS) for supervising, supporting and encouraging me during the time I conduct my senior project and final thesis. Also, I would like to thank Mr. Dipl.-Ing Mansooji - communication lab engineer at FRA-UAS, Dr. Vo Bich Hien - lecturer and Mr. Duong Huynh Bao - former control lab engineer at Vietnamese - German University for guiding me on technical and programming aspects. I also would like to thank my family for their supports during my bachelor degree time. This project would not be completed without their grateful guidances and supports. Thanks to their encouragements, I can improve myself, not only on the fundamental background in my major, but also necessary skills for my future career. I would like to mention all of my seniors and classmates who have helped me through this thesis.\par
 	\vspace{1cm}
 }
 \cleardoublepage
